--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
     <body>
         <div class="mainContainer">
             <div id="dice" class="dice"></div>
-            <button onClick="randomNumber()" class="button">Throw</button>
+            <button id="button" class="button blue">Launch</button>
         </div>
+
+        <script src="js/index.js"></script>
     </body>
 </html>
