--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
         <div class="mainContainer">
             <div id="dice" class="dice"></div>
             <button id="button" class="button blue">Launch</button>
+            <div id="records" class="records"></div>
         </div>
 
         <script src="js/index.js"></script>
