--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
         <div class="mainContainer">
             <div id="dice" class="dice"></div>
             <button id="button" class="button blue">Launch</button>
-            <div id="records" class="records"></div>
+            <p>Previous Launches:</p>
+            <div id="records" class="records">none</div>
+            <!--<div id="mean" class="mean"></div>-->
         </div>
 
         <script src="js/index.js"></script>
